--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 
 /* FONTS */
 @import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
 
 body {
   margin: 0;
