--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,3 +1,4 @@
 @import './Header/Header.scss';
 @import './Featured/Featured.scss';
 @import './Footer/Footer.scss';
+@import './Services/Services.scss';
