--- a/src/components/Image/Image.scss
+++ b/src/components/Image/Image.scss
@@ -14,7 +14,7 @@
   opacity: 0.3;
   transform: scale(1.1);
 }
-@media (hover: none) and (pointer: coarse) {
+@media (max-width: 65rem) {
   .image-wrapper:hover {
     opacity: 1;
     transform: scale(1);
