Adding contacts page

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -2,3 +2,4 @@
 @import './Featured/Featured.scss';
 @import './Footer/Footer.scss';
 @import './Services/Services.scss';
+@import './Contacts/Contacts.scss';
