Adding gallery and single album pages

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -3,3 +3,4 @@
 @import './Footer/Footer.scss';
 @import './Services/Services.scss';
 @import './Contacts/Contacts.scss';
+@import './Gallery/Gallery.scss';
