Image block hover fix, adding login and admin pages

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -4,3 +4,4 @@
 @import './Services/Services.scss';
 @import './Contacts/Contacts.scss';
 @import './Gallery/Gallery.scss';
+@import './Admin/index.scss';
