--- a/src/components/Image/Image.scss
+++ b/src/components/Image/Image.scss
@@ -1,16 +1,18 @@
+.image-block {
+  width: 100%;
+  height: 100%;
+}
 .image-wrapper {
   width: 100%;
   height: 100%;
   position: relative;
-  // display: flex;
-  // justify-content: center;
   transition: transform ease-in 0.2s;
 }
 .image-wrapper__image {
   width: 100%;
   height: 100%;
 }
-.image-wrapper:hover {
+.image-block:hover .image-wrapper {
   opacity: 0.3;
   transform: scale(1.1);
 }
