Adding all admin pages

--- a/src/components/Admin/index.scss
+++ b/src/components/Admin/index.scss
@@ -1,2 +1,6 @@
 @import './Main/Main.scss';
 @import './Login/Login.scss';
+@import './Services/Services.scss';
+@import './Gallery/Gallery.scss';
+@import './Contacts/Contacts.scss';
+@import './Home/Home.scss';
