--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -1,5 +1,5 @@
 .featured {
-  font-family: 'Playfair Display';
+  font-family: "Playfair Display";
   letter-spacing: 0.02em;
 }
 .featured-head {
@@ -29,8 +29,9 @@
   width: 80%;
   grid-gap: 3rem;
   grid-template-columns: auto auto auto;
-  margin: 2rem auto;
+  margin: 3rem auto 0 auto;
   justify-content: center;
+  padding-bottom: 10rem;
 }
 .featured-gallery__image {
   position: relative;
