Footer and  spinner position fix

--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  font-family: 'Work Sans';
+  font-family: "Work Sans";
 }
 .contacts-map {
   filter: grayscale(100%);
@@ -16,7 +16,7 @@
   margin-bottom: 1rem;
 }
 .contacts-info h1 {
-  font-family: 'Playfair Display';
+  font-family: "Playfair Display";
 }
 
 .contacts-info,
@@ -68,7 +68,7 @@
 }
 
 .form-button {
-  font-family: 'Work Sans';
+  font-family: "Work Sans";
   padding: 1rem 2rem;
   color: $color__white;
   font-weight: bold;
