Adding image, album removal, album editing and login validation

--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -32,6 +32,9 @@
   margin: 3rem auto 0 auto;
   justify-content: center;
 }
+.featured-gallery__image-wrapper {
+  text-align: center;
+}
 .featured-gallery__image {
   position: relative;
   width: 25rem;
