--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -82,6 +82,22 @@
   background: #c2ae96;
 }
 
+.email-sent {
+  background: #cbf7cb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
+  width: 50%;
+  box-shadow: 0px 10px 22px 3px rgba(0, 0, 0, 0.3);
+}
+.email-failed {
+  background: #f7cbcf;
+}
+.email-sent h3 {
+  color: $color__buttonblack;
+}
+
 @media (max-width: 90rem) {
   .message-form {
     width: 70%;
