--- a/src/components/Admin/Gallery/Gallery.scss
+++ b/src/components/Admin/Gallery/Gallery.scss
@@ -1,7 +1,19 @@
 .form-control {
-  font-family: 'Work Sans';
+  font-family: "Work Sans";
   text-align: center;
 }
-.form-control input[type='file'] {
+.form-control input[type="file"] {
   margin-top: 0.5rem;
+}
+.validate {
+  margin-bottom: 2rem;
+  background: #f7cbcb;
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+.validate p {
+  margin: 1rem;
+  width: 100%;
+  font-weight: 700;
+  text-transform: uppercase;
 }
