--- a/src/components/app/index.scss
+++ b/src/components/app/index.scss
@@ -1,8 +1,8 @@
 /* GLOBAL */
-@import "./styles/variables/all";
+@import "../../styles/variables/all";
 
 /* COMPONENTS */
-@import "./components/index.scss";
+@import "../index.scss";
 
 /* FONTS */
 @import url("https://fonts.googleapis.com/css?family=Work+Sans&display=swap");
